# ananke

./: .buildinfo  .gitignore  Makefile  README.md  ananke.configurations.html  ananke.configurations.presets.html  ananke.html  ananke.models.html  ananke.schemas.html  ananke.services.collection.html  ananke.services.html  ananke.visualisation.html  examples.html  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yaml  documentation.yaml
_modules/: index.html
_modules/ananke/configurations/: collection.html  detector.html  events.html
_modules/ananke/models/: detector.html  event.html  geometry.html  interfaces.html
_modules/ananke/schemas/: detector.html
_modules/ananke/services/: detector.html
_modules/ananke/services/collection/: exporters.html  importers.html  storage.html
_modules/ananke/visualisation/: detector.html
_sources/: ananke.configurations.rst.txt  ananke.models.rst.txt  ananke.rst.txt  ananke.schemas.rst.txt  ananke.services.rst.txt  intro.rst.txt
ananke/: __init__.py  defaults.py  utils.py
ananke/configurations/: __init__.py  collection.py  detector.py  events.py
ananke/configurations/presets/: __init__.py  detector.py
ananke/data/: __init__.py  configurations.py  detector.py  event.py  geometry.py  interfaces.py
ananke/models/: __init__.py  collection.py  detector.py  event.py  exporters.py  geometry.py  interfaces.py
ananke/schemas/: __init__.py  detector.py  event.py  exporters.py  geometry.py
ananke/services/: __init__.py  detector.py
ananke/services/collection/: __init__.py  exporters.py  importers.py  storage.py
ananke/visualisation/: __init__.py  detector.py  event.py
docs/: Makefile  ananke.configurations.presets.rst  ananke.rst  ananke.services.collection.rst  ananke.services.rst  ananke.visualisation.rst  conf.py  index.rst
notebooks/: 00_data_format.ipynb  01-work-with-detectors.ipynb  01_work_with_detectors.ipynb  02_create_collection.ipynb  03_create_merged_collection.ipynb  04_Noise_To_Cascade_Evaluation.ipynb  05_characterize_dataset.ipynb  create_merged_collection.py  export.py  import.py  new_old_collection.py
tests/: test_ananke.py  test_defaults.py  test_utils.py
tests/common/: schemas.py
tests/configurations/: test_events.py
tests/configurations/presets/: test_detector.py
tests/models/: test_detector.py  test_event.py  test_geometry.py  test_interfaces.py
tests/services/collection/: test_exporters.py  test_storage.py
